--- a/Track/www/index.html
+++ b/Track/www/index.html
@@ -55,7 +55,7 @@
     <div data-role="page" id="pageone">
 
         <div data-role="panel" id="navpanel" data-display="overlay">
-            <h2>Select</h2>
+            <h2>Start your track</h2>
             <p></p>
             <input type="button" value="Current location" id="btnhere" data-theme="b">
             <p></p>
