--- a/Track/www/index.html
+++ b/Track/www/index.html
@@ -11,7 +11,7 @@
     <script src="jquery-mobile/jquery.mobile-1.4.5.min.js"></script>
     <script src="js/index.js"></script>
     
-    <script src="phonegap.js"></script>
+    <!--<script src="phonegap.js"></script>-->
     <!--  Google maps API call + key  -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbhpu9kAo7650VIz0020cvGANLy8ESkqc " defer></script>
 
