--- a/Track/www/index.html
+++ b/Track/www/index.html
@@ -77,7 +77,7 @@
             <p></p>
             <p></p>
             <input type="button" value="Clear Path" id="clear" data-theme="b">
-            <input onclick="deleteMarkers();" type=button value="Delete Markers">
+            <input type=button value="Delete Markers" id="deleteM" data-theme="b">
         </div>
 
         <div data-role="header">
