--- a/Track/www/index.html
+++ b/Track/www/index.html
@@ -6,11 +6,12 @@
     <!--  Mobile screen size control  -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="jquery-mobile/jquery.mobile-1.4.5.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/toast.css" type="text/css">
     <script src="cordova.js"></script>
     <script src="jquery-mobile/jquery-1.8.3.min.js"></script>
     <script src="jquery-mobile/jquery.mobile-1.4.5.min.js"></script>
     <script src="js/index.js"></script>
-    
+    <script src="js/toast.js"></script>
     <script src="phonegap.js"></script>
     <!--  Google maps API call + key  -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbhpu9kAo7650VIz0020cvGANLy8ESkqc " defer></script>
