--- a/Track/www/index.html
+++ b/Track/www/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
      <!--  Google maps API call + key  -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbhpu9kAo7650VIz0020cvGANLy8ESkqc " defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbhpu9kAo7650VIz0020cvGANLy8ESkqc "></script>
 
     
     <link href="jquery-mobile/jquery.mobile-1.4.5.min.css" rel="stylesheet" type="text/css">
@@ -15,9 +15,9 @@
     <script src="cordova.js"></script>
     <script src="jquery-mobile/jquery-1.11.1.min.js"></script>
     <script src="jquery-mobile/jquery.mobile-1.4.5.min.js"></script>
-    <script src="js/index.js"></script>
-    <script src="js/toast.js"></script>
 
+    <script src="js/toast.js"></script>
+    <script src="js/index.js"></script>
    
     <!--  Maximise content div - map div dynamically sized on run (getRealContentHeight())  -->
     <style>
