--- a/Track/www/index.html
+++ b/Track/www/index.html
@@ -39,10 +39,11 @@
       }
      /* Style for Map style selector*/
         .selector-control {
+        float: right;
         font-size: 14px;
         line-height: 30px;
-        padding-left: 5px;
-        padding-right: 5px;
+
+            
       }
         
     </style>
