--- a/Track/www/index.html
+++ b/Track/www/index.html
@@ -100,7 +100,7 @@
          <!--header-->
         <div data-role="header">
             <a href="#navpanel" class="ui-btn ui-corner-all ui-icon-home ui-btn-icon-left ui-icon-bars ui-btn-icon-left" rel="external">Start</a>
-            <h3>Track</h3>
+            <h3>Tracking your way</h3>
         </div>
     
         
