--- a/Track/www/index.html
+++ b/Track/www/index.html
@@ -76,7 +76,7 @@
         
         <!--Operation panel-->
         <div data-role="panel" id="navpanel" data-display="overlay">
-            <h2>Track my way</h2>
+            <h2>Track My Way</h2>
             <p></p>
             <input type="button" value="Current location" id="btnhere" >
             <p></p>
