--- a/Track/www/index.html
+++ b/Track/www/index.html
@@ -117,7 +117,7 @@
         <div data-role="footer" data-position="fixed">
             
             <!--Show track state-->
-            <h3>Track <span id="trackText">Stoped</span></h3>
+            <h3>Track <span id="trackText">Stopped</span></h3>
             
         </div>
 
