--- a/Track/www/index.html
+++ b/Track/www/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/toast.css" type="text/css">
     
       <!--  Google maps API call + key  -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbhpu9kAo7650VIz0020cvGANLy8ESkqc "></script>
+   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbhpu9kAo7650VIz0020cvGANLy8ESkqc "></script>-->
 
     <script src="cordova.js"></script>
     <script src="jquery-mobile/jquery-1.11.1.min.js"></script>
